--- a/profile.html
+++ b/profile.html
@@ -10,5 +10,17 @@
 
     <button onclick="submit()">Return (temp)</button>
     <script src="script2.js"></script>
+
+    <div class="profilepage">
+
+        <h1> PROFILE</h1>
+
+        <div class="profiletext">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio accusamus maxime reiciendis cumque quod, voluptatibus voluptas itaque consequatur libero, cupiditate voluptates aliquam nihil. Sapiente est adipisci ipsam, accusantium corporis mollitia!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio accusamus maxime reiciendis cumque quod, voluptatibus voluptas itaque consequatur libero, cupiditate voluptates aliquam nihil. Sapiente est adipisci ipsam, accusantium corporis mollitia!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio accusamus maxime reiciendis cumque quod, voluptatibus voluptas itaque consequatur libero, cupiditate voluptates aliquam nihil. Sapiente est adipisci ipsam, accusantium corporis mollitia!</p>
+
+        </div>
+    </div>
 </body>
 </html>
