--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <p>Shielding Innocence</p>
     </div>
 
-    <form class="signup">
+    <form class="signup"  action="profile.html">
         <legend>Sign-up</legend>
 
         <br>
