--- a/profile.html
+++ b/profile.html
@@ -7,20 +7,23 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-
-    <button onclick="submit()">Return (temp)</button>
-    <script src="script2.js"></script>
+    <div class="navbar">
+        <p>Shielding Innocence</p>
+    </div>
 
     <div class="profilepage">
 
         <h1> PROFILE</h1>
 
         <div class="profiletext">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio accusamus maxime reiciendis cumque quod, voluptatibus voluptas itaque consequatur libero, cupiditate voluptates aliquam nihil. Sapiente est adipisci ipsam, accusantium corporis mollitia!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio accusamus maxime reiciendis cumque quod, voluptatibus voluptas itaque consequatur libero, cupiditate voluptates aliquam nihil. Sapiente est adipisci ipsam, accusantium corporis mollitia!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio accusamus maxime reiciendis cumque quod, voluptatibus voluptas itaque consequatur libero, cupiditate voluptates aliquam nihil. Sapiente est adipisci ipsam, accusantium corporis mollitia!</p>
-
+            <p id="fn"></p>
+            <p id="ln"></p>
+            <p id="email"></p>
+            <p id="contact"></p>
+            <p id="pass"></p>
         </div>
     </div>
+
+    <script src="script2.js"></script>
 </body>
 </html>
