--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     
         <p>Gender</p>
      
-        <input type="radio" name="gen" value="male">
-        <label for="Male">Male</label></br>
-        <input type="radio" name="gen" value="female">
-        <label for="Female">Female</label></br>
-        <input type="radio" name="gen" value="na" required>
-        <label for="mindanao">Prefer not to say</label>
+        <input type="radio" name="gen" value="male" id="Male">
+        <label for="gen">Male</label></br>
+        <input type="radio" name="gen" value="female" id="Female">
+        <label for="gen">Female</label></br>
+        <input type="radio" name="gen" value="na" required id="Pnts">
+        <label for="gen">Prefer not to say</label>
 
         <br><br>
 
@@ -49,7 +49,7 @@
         <br>
 
         <label for="textArea">Why do you support this campaign? </label></br>
-        <textarea id="textArea" name="textArea" rows="4" cols="50" onblur="blurfn6()" required></textarea>
+        <textarea id="textAreaa" name="textArea" rows="4" cols="50" onblur="blurfn6()" required></textarea>
 
         <br>
 
